fixtures/frontend/milestone-2/valid/pipe-truthy-falsy-signal-carriers/main.aivi
type User = {
    name: Text
}

type LoadError = {
    message: Text
}

type FormError = {
    message: Text
}

signal ready : Signal Bool = True

signal maybeUser : Signal (Option User) = Some { name: "Ada" }

signal loaded : Signal (Result LoadError User) = Err { message: "offline" }

signal submitted : Signal (Validation FormError User) = Valid { name: "Grace" }

value readyText : Signal Text =
    ready
     T|> "start"
     F|> "wait"

value greeting : Signal Text =
    maybeUser
     T|> .name
     F|> "guest"

value maybeDisplay : Signal Text =
    maybeUser
     F|> "guest"
     T|> .name

value rendered : Signal Text =
    loaded
     T|> .name
     F|> .message

value summary : Signal Text =
    submitted
     T|> .name
     F|> .message
