fixtures/frontend/milestone-2/invalid/truthy-falsy-payloadless-projection/main.aivi
value ready:Bool = True

value branch =
    ready
     T|> .name
     F|> "wait"
